feat: implement post management system with model, repository and service layers